# rig

./: .gitignore  AGENTS.md  Cargo.toml  README.md
client/: Cargo.toml
client/src/: auth.rs  credentials.rs  main.rs  repository.rs  utils.rs
client/src/commands/: add.rs  blame.rs  branch.rs  checkout.rs  clone.rs  commit.rs  fetch.rs  gitmodule.rs  init.rs  log.rs  mod.rs  mv.rs  pull.rs  push.rs  stash.rs  status.rs
client/tests/: branching_workflow.sh  test_file_permissions.sh  test_force_unlock.sh  test_large_file_compression.sh  test_pull_revision.sh  workflow.sh
protocol/: Cargo.toml
server/: Cargo.toml
server/examples/: users.json
server/examples/ComplexProject/: index.json
server/examples/ComplexProject/artifacts/binary/: rev1.blend
server/examples/ComplexProject/artifacts/config/: rev1.blend
server/examples/ComplexProject/artifacts/docs_guide/: rev1.blend
server/examples/ComplexProject/artifacts/readme/: rev1.blend  rev2.blend
server/examples/ComplexProject/artifacts/src_main/: rev1.blend  rev2.blend
server/examples/ExampleProject/: index  index.json
server/fixtures/: setup.sh
server/migrations/: 001_create_users.sql  002_create_permissions.sql  003_create_artifacts.sql  003_create_ssh_keys.sql  004_create_file_metadata.sql  005_create_auth_tokens.sql
server/src/: artifacts.rs  auth.rs  files.rs  keys.rs  main.rs  users.rs
server/web/: README.md  package.json
server/web/app/: globals.css  layout.tsx  page.tsx
server/web/app/components/: Navbar.tsx
server/web/app/explore/: page.tsx
server/web/app/settings/: page.tsx
(+17 files in other folders)
