[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
base64 = "0.22.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }
uuid = { version = "1", features = ["v4", "serde"] }
protocol = { path = "../protocol" }

sha1 = "0.10"
sqlx = { version = "0.8", features = ["postgres", "macros", "runtime-tokio", "uuid", "chrono"] }
bcrypt = "0.15"
jsonwebtoken = "9"
chrono = { version = "0.4", features = ["serde"] }
